* Bug Fix: Fix an bug where `nil` in a string field would cause a 500 error.

New in 0.0.11:

* Improvement: Add `Administrate::Field::Boolean` for displaying boolean data.
* Improvement: support a `class_name` option in `belongs_to` relationships.
  The class name is now detected by the dashboard generator.

New in 0.0.10:

* Improvement: support lookup for models that have a custom `to_param` method.
* Improvement: Truncate strings on index page,
  with an optional argument for truncation length
* Improvement: Add `Administrate::Field::DateTime`
  for displaying dates, times, and datetimes.
* Improvement: Add `Administrate::Field::Number`
  for displaying currency, integers, and floats.
  Supports options `prefix` and `decimals`.
* Improvement: Generate a single controller to serve all resources,
  to reduce noise after running the install generator.
* Improvement: Don't display redundant attributes for belongs_to relationships,
  such as `post_id` or `post_type`.
* UI: Show whitespace in strings on `show` pages
* Bug Fix: Squash several 500 errors caused by polymorphic relationships.

New in 0.0.9:

* Bug Fix: Improve development environment;
  developers can now edit Administrate-related files in their app
  without needing to restart their server afterwards.
* Bug Fix: Stop flash from index page from persisting across requests
* UI: Use a light background
* UI: Improve element spacing on index page
* UI: Improve flash message appearance
* UI: make elements more consistent between index and show pages

New in 0.0.8:

* Change: Change the `DashboardManifest` and `ModelDashboard` APIs
  to use constants instead of methods. Recognized constants are:
  * `ATTRIBUTE_TYPES`
  * `FORM_ATTRIBUTES`
  * `SHOW_PAGE_ATTRIBUTES`
  * `FORM_ATTRIBUTES`

New in 0.0.7:

* Improvement: Support `has_one` relationships
* Improvement: Support `has_many :through` associations
  with a custom `source` option.
* Improvement: Support `has_many` associations